apps/conv-learning-manager/src/styles.scss
/* You can add global styles to this file, and also import other style files */
@use '@angular/material' as mat;
@import 'https://fonts.googleapis.com/icon?family=Material+Icons';

@import '_theme';
@import '_variables';

* {
  font-family: 'Roboto', sans-serif;
}

html,
body {
  width: 100%;
  height: 100%;
}

//Block Connectors
//endpoint
.block_endpoint circle {
  fill: var(--connector-color-teal-blue);
  stroke-width: 1px;
  stroke: var(--connector-outline-color-blue);
}

//connector
.jsplumb_instance svg path {
  stroke: var(--connector-color);
  stroke-width: 3.5px;

}

.frame-connector {
  z-index: -1;
}

.jtk-overlay {
  background-color: #ffffff;
  border: none;
  border-radius: 30px;
  padding: 8px 8px 6px 8px;
  cursor: pointer;
  position: relative;
  display: none;
  z-index: 5;
}

.jtk-overlay svg {
  color: var(--convs-mgr-color-primary-pink) !important;
  font-size: 16px !important;
}

.jsplumb_instance svg path:hover {
  stroke: var(--convs-mgr-color-primary-purple);
}

.jtk-hover {
  cursor: pointer;
  z-index: 4;
}

.jtk-hover+.jtk-overlay {
  display: block;
}

.doc-icon {
	text-align: center;
	color: var(--convs-mgr-color-primary-purple) !important;
	background-color: var(--convs-mgr-color-primary-white) !important;
	opacity: 1;
  display: flex;
  justify-content: center;
  align-items: center;

	.fa-spin {
		color: var(--convs-mgr-color-primary-purple) !important;
		border: none;
	}
}

.wrapper {
  padding: 1.875rem;
}

mat-form-field.search{
  width: 100%;
}

mat-form-field.full-field{
  width: 100%;
}

span.label{
  padding-left: 0.6rem;
}

